# nysas-financial-tracker

./: README.md  main.py  pyproject.toml
.github/workflows/: release.yml
scripts/: create-release.ps1  pack.ps1  pack.py  pack.sh
src/finance_app/: __init__.py  app.py  config.py
src/finance_app/data/: uk_allowances_2026_27.json  uk_tax_england.json
src/finance_app/db/: __init__.py  migrations.py  models.py  seed.py  session.py
src/finance_app/pages/: __init__.py  calculators.py  edit_data.py  forecasting.py  guide.py  income_report.py  layout.py  overview.py  profile_select.py  view_data.py  visualisations.py
src/finance_app/services/: accounts.py  allowances.py  calculators.py  csv_schema.py  draft_session.py  export.py  forecasting.py  import_data.py  income.py  inventory.py  metrics.py  profiles.py  recurring.py  snapshots.py
src/finance_app/ui/: charts.py  components.py  theme.py
