[project]
name = "uk-finance"
version = "0.2.1"
description = "Nysa's Financial Tracker — local-first UK personal finance app"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "nicegui>=2.0.0",
    "sqlalchemy>=2.0.0",
    "plotly>=5.0.0",
    "pywebview>=6.2.1",
]

[project.scripts]
uk-finance = "finance_app.app:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/finance_app"]

[tool.hatch.build.targets.wheel.force-include]
"src/finance_app/data" = "finance_app/data"

[tool.hatch.build.targets.sdist]
include = [
    "src/finance_app",
    "main.py",
    "README.md",
    "scripts",
]

[dependency-groups]
dev = [
    "pyinstaller>=6.0.0",
]

[tool.uv]
package = true
